--- a/GearJuJu/Info.plist
+++ b/GearJuJu/Info.plist
@@ -38,6 +38,11 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UISupportedExternalAccessoryProtocols</key>
+	<array>
+		<string>com.honeywell.scansled.protocol.decoder</string>
+		<string>com.honeywell.scansled.protocol.pm</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
